[gd_scene load_steps=5 format=2]

[ext_resource path="res://scn_scenes/scn_ObjectBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/0_mainmenu/scrI_Obj_CreditsButton.gd" type="Script" id=2]
[ext_resource path="res://sfx_audio/f0_sfx_pianochimes/sfx_pianochime_03_jazzyendpling.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 110.653, 3.48974 )

[node name="I_Obj_CreditsButton" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="sfx_discovered" parent="." index="3"]
stream = ExtResource( 3 )

[node name="AnimatedSprite" parent="." index="5"]
animation = "credit"

[node name="TransitionTimer" type="Timer" parent="." index="8"]
wait_time = 1.5
one_shot = true
[connection signal="timeout" from="TransitionTimer" to="." method="_on_TransitionTimer_timeout"]
